# SkyProDz

./: README.md  convert_csv_to_excel.py  dewde.py  error_test  log_test  pyproject.toml
src/: __init__.py  decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  transaction_processor.py  transactions.py  utils.py  widget.py  wiget.py
test_data/: test_transactions.xlsx
tests/: conftest.py  invalid_json.json  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_transactions.py  test_utils.py  test_widget.py
